--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 
 	<!-- Navbar -->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<nav class="navbar navbar-expand-lg navbar-light bg-white">
 		<a class="navbar-brand" href="#"><img src="images/logo.originale.png" alt="Logo"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
 			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,9 +68,10 @@
 	<div class="   sezione-sfondo">
 
 
-		<div class="container-fluid d-flex  justify-content-center flex-column flex-md-row  p-0 animation fadein_right">
+		<div
+			class="container-fluid d-flex  justify-content-center flex-column flex-md-row  p-0 animation fadein_right bg-white ">
 
-			<div class="col-md-4 p-0">
+			<div class="col-md-4 p-0 ">
 				<img class="img-fluid" src="images/home-page/sezione-vini.jpg" alt="Vini">
 			</div>
 			<div class="col-md-8 p-5">
@@ -83,8 +84,11 @@
 				<a href="vini.html" class="m-3 btn btn-outline-secondary p-2 btn-sm">SCOPRI DI PIÙ</a>
 			</div>
 		</div>
+		<div>&nbsp;</div>
 
-		<div class="container-fluid d-flex  justify-content-center flex-column flex-md-row  p-0  animation fadein_left">
+
+		<div
+			class="container-fluid d-flex  justify-content-center flex-column flex-md-row  p-0  animation fadein_left bg-white">
 
 			<div class="col-md-4 p-0 order-md-2">
 				<img class="img-fluid" src="images/home-page/sezione-territorio.jpg" alt="Collina del Prosecco">
@@ -100,7 +104,9 @@
 			</div>
 		</div>
 
-		<div class="container-fluid d-flex  justify-content-center flex-column flex-md-row  p-0 animation fadein_right">
+		<div>&nbsp;</div>
+		<div
+			class="container-fluid d-flex  justify-content-center flex-column flex-md-row  p-0 animation fadein_right bg-white">
 
 			<div class="col-md-4 p-0 ">
 				<img class="img-fluid" src="images/home-page/sezione-storia.png" alt="Giovane Tradizione">
