--- a/territorio.html
+++ b/territorio.html
@@ -20,7 +20,7 @@
 
 
 	<!-- Navbar -->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<nav class="navbar navbar-expand-lg navbar-light bg-white">
 		<a class="navbar-brand" href="index.html"><img src="images/logo.originale.png" alt="Logo"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
 			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,7 +29,8 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 			<ul class="navbar-nav ml-auto  mr-5">
 				<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="vini.html">Vini</a></li>
-				<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="territorio.html">Territorio</a></li>
+				<li class="nav-item text-uppercase mr-4"><a class="nav-link active"
+						href="territorio.html">Territorio</a></li>
 				<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="storia.html">Storia</a></li>
 			</ul>
 		</div>
@@ -49,20 +50,20 @@
 		<div class="carousel-inner">
 			<div class="carousel-item active">
 				<img class="d-block w-100" src="images/territorio/carousel-1.jpg" alt="First slide">
-				<div class="carousel-caption d-none d-md-block">
+				<div class="carousel-caption d-none d-md-block  w-100">
 					<p class="title">VINI CHE RISVEGLIANO I SENSI</p>
 				</div>
 			</div>
 			<div class="carousel-item">
 				<img class="d-block w-100" src="images/territorio/carousel-2.jpg" alt="Second slide">
-				<div class="carousel-caption d-none d-md-block">
+				<div class="carousel-caption d-none d-md-block  w-100">
 					<p class="title">SCOPRI I NOSTRI VINI</p>
 
 				</div>
 			</div>
 			<div class="carousel-item">
 				<img class="d-block w-100" src="images/territorio/carousel-3.jpg" alt="Third slide">
-				<div class="carousel-caption d-none d-md-block">
+				<div class="carousel-caption d-none d-md-block  w-100">
 					<p class="title">UN VIAGGIO DI GUSTO</p>
 
 				</div>
@@ -79,27 +80,22 @@
 
 
 
-
+	<div class="row m-0 p-5 animation fadeIn bg-grey">
+		<div class="container-fluid">
+			<h2 class="text-center section-title">COLLINE DEL PROSECCO</h2>
+			<p class="text-center section-subtitle">Nelle nostre vigne ogni grappolo è un dono della natura
+				coltivato con passione</p>
+		</div>
+	</div>
 
 	<!-- Content Section -->
-
-
-
-
-
 	<section class="content-section m-0 p-0">
 		<div class="container-fluid ">
 
-			<div class="row m-0 p-5 animation fadeIn">
-				<div class="container-fluid">
-					<h2 class="text-center section-title">COLLINE DEL PROSECCO</h2>
-					<p class="text-center section-subtitle">Nelle nostre vigne ogni grappolo è un dono della natura
-						coltivato con passione</p>
-				</div>
-			</div>
 
 
-			<div class="row mt-5  p-0 animation fadein_right">
+
+			<div class="row mt-5 bg-white p-0 animation fadein_right">
 				<div class="col-md-4 p-0 m-0 ">
 					<img class="img-fluid mb-0" src="images/territorio/img-1.jpg" alt="Foto">
 				</div>
@@ -116,7 +112,7 @@
 				</div>
 			</div>
 
-			<div class="row mt-5 animation fadeIn">
+			<div class="row mt-5 animation fadeIn bg-grey">
 				<div class="col-md-12">
 					<img class="map" src="images/mappa.png" alt="Mappa">
 				</div>
