--- a/storia.html
+++ b/storia.html
@@ -18,10 +18,10 @@
 	<link rel="stylesheet" href="css_sito.css">
 </head>
 
-<body>
+<body class="bg-grey">
 
 	<!-- Navbar -->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fff;">
 		<a class="navbar-brand" href="index.html"><img src="images/logo.originale.png" alt="Logo"></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
 			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,10 +31,11 @@
 			<ul class="navbar-nav ml-auto  mr-5">
 				<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="vini.html">Vini</a></li>
 				<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="territorio.html">Territorio</a></li>
-				<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="storia.html">Storia</a></li>
+				<li class="nav-item text-uppercase mr-4"><a class="nav-link active" href="storia.html">Storia</a></li>
 			</ul>
 		</div>
 	</nav>
+
 
 
 	<!-- Carousel -->
@@ -50,19 +51,19 @@
 		<div class="carousel-inner">
 			<div class="carousel-item active">
 				<img class="d-block w-100" src="images/storia/carousel-1.jpg" alt="First slide">
-				<div class="carousel-caption d-none d-md-block">
+				<div class="carousel-caption d-none d-md-block  w-100">
 					<p class="title">VINI CHE RISVEGLIANO I SENSI</p>
 				</div>
 			</div>
 			<div class="carousel-item">
 				<img class="d-block w-100" src="images/storia/carousel-2.jpg" alt="Second slide">
-				<div class="carousel-caption d-none d-md-block">
+				<div class="carousel-caption d-none d-md-block  w-100">
 					<p class="title">SCOPRI I NOSTRI VINI</p>
 				</div>
 			</div>
 			<div class="carousel-item">
 				<img class="d-block w-100" src="images/storia/carousel-3.jpg" alt="Third slide">
-				<div class="carousel-caption d-none d-md-block">
+				<div class="carousel-caption d-none d-md-block  w-100">
 					<p class="title">UN VIAGGIO DI GUSTO</p>
 				</div>
 			</div>
@@ -122,7 +123,7 @@
 						arrivare a comprendere 20 ettari di vigneti, 16 dei quali collocati nel territorio UNESCO delle
 						Colline del Prosecco di Conegliano Valdobbiadene.</p>
 				</div>
-				<div class="col-md-6 p-4 pl-md-0 pr-md-5  animation fadein_right  "> 
+				<div class="col-md-6 p-4 pl-md-0 pr-md-5  animation fadein_right  ">
 					<div class="row align-items-center ">
 						<div class="col-md-5  col-6">
 							<img class="img-fluid mb-4 mr-5" src="https://dummyimage.com/300x400/000/fff&text=Foto"
