--- a/vini.html
+++ b/vini.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -7,158 +8,165 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 	<link rel="stylesheet" href="css_sito.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </head>
+
 <body>
 
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	<a class="navbar-brand" href="index.html"><img src="images/logo.originale.png" alt="Logo"></a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
-	<div class="collapse navbar-collapse" id="navbarNav">
-		<ul class="navbar-nav ml-auto  mr-5">
-			<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="vini.html">Vini</a></li>
-			<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="territorio.html">Territorio</a></li>
-			<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="storia.html">Storia</a></li>
-		</ul>
+	<!-- Navbar -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-white">
+		<a class="navbar-brand" href="index.html"><img src="images/logo.originale.png" alt="Logo"></a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav ml-auto  mr-5">
+			<li class="nav-item text-uppercase mr-4"><a class="nav-link active" href="vini.html">Vini</a></li>
+				<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="territorio.html">Territorio</a></li>
+				<li class="nav-item text-uppercase mr-4"><a class="nav-link" href="storia.html">Storia</a></li>
+			</ul>
+		</div>
+	</nav>
+
+	<!-- Carousel -->
+	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+		<!-- Indicators -->
+		<ol class="carousel-indicators">
+			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+		</ol>
+
+		<!-- Carousel items -->
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+
+				<img class="d-block w-100" src="images/vini/carousel.jpg" alt="First slide">
+
+				<div class="carousel-caption d-none d-md-block  w-100">
+					<p class="title">VINI CHE RISVEGLIANO I SENSI</p>
+				</div>
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="images/vini/carousel-1.jpg" alt="Second slide">
+				<div class="carousel-caption d-none d-md-block  w-100">
+					<p class="title">SCOPRI I NOSTRI VINI</p>
+
+				</div>
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="images/vini/carousel-2.jpg" alt="Third slide">
+				<div class="carousel-caption d-none d-md-block  w-100">
+					<p class="title">UN VIAGGIO DI GUSTO</p>
+
+				</div>
+			</div>
+		</div>
+
+		<!-- Controls -->
+		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
 	</div>
-</nav>
 
-<!-- Carousel -->
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-	<!-- Indicators -->
-	<ol class="carousel-indicators">
-		<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-		<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-		<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-	</ol>
 
-	<!-- Carousel items -->
-	<div class="carousel-inner">
-		<div class="carousel-item active">
-
-			<img class="d-block w-100" src="images/vini/carousel.jpg" alt="First slide">
-
-			<div class="carousel-caption d-none d-md-block">
-				<p class="title">VINI CHE RISVEGLIANO I SENSI</p>
+	<!-- Products Section -->
+	<section class="container my-5">
+		<div class="row m-5 ">
+			<div class="container-fluid">
+				<h2 class="text-center section-title">LA NOSTRA SELEZIONE</h2>
+				<p class="text-center section-subtitle">L'espressione autentica della nostra passione, un brindisi alla
+					vita</p>
 			</div>
 		</div>
-		<div class="carousel-item">
-			<img class="d-block w-100" src="images/vini/carousel-1.jpg" alt="Second slide">
-			<div class="carousel-caption d-none d-md-block">
-				<p class="title">SCOPRI I NOSTRI VINI</p>
-
+		<div class="row">
+			<div class="col-md-3 col-sm-6 text-center animation fadeIn">
+				<img class="img-fluid" src="images/vini/conegliano-valdobbiadene.jpg"
+					alt="Prosecco Superiore EXTRA DRY">
+				<h5 class="product-title px-4">CONEGLIANO VALDOBBIADENE</h5>
+				<p class="product-subtitle"><span class="font-italic"> Superiore</span> <br> EXTRA DRY</p>
+			</div>
+			<div class="col-md-3 col-sm-6 text-center animation fadeIn">
+				<img class="img-fluid" src="images/vini/conegliano-valdobbiadene_1.jpg" alt="Prosecco Sur Lie">
+				<h5 class="product-title px-4">CONEGLIANO VALDOBBIADENE</h5>
+				<p class="product-subtitle"><span class="font-italic">Prosecco Sur Lie </span> <br> DOCG</p>
+			</div>
+			<div class="col-md-3 col-sm-6 text-center animation fadeIn">
+				<img class="img-fluid" src="images/vini/conegliano-valdobbiadene_2.jpg" alt="Prosecco Superiore BRUT">
+				<h5 class="product-title px-4">CONEGLIANO VALDOBBIADENE</h5>
+				<p class="product-subtitle"><span class="font-italic">Prosecco Superiore </span><br> DOCG - BRUT</p>
+			</div>
+			<div class="col-md-3 col-sm-6 text-center animation fadeIn">
+				<img class="img-fluid" src="images/vini/verdisio.jpg" alt="Verdìso">
+				<h5 class="product-title px-4">VERDISO</h5>
+				<p class="product-subtitle"><span class="font-italic">Colli Trevigiani </span> <br> IGT</p>
+			</div>
+			<div class="col-md-3 col-sm-6 text-center animation fadeIn">
+				<img class="img-fluid" src="images/vini/merlot.jpg" alt="Merlot">
+				<h5 class="product-title px-4">MERLOT</h5>
+				<p class="product-subtitle"><span class="font-italic">Colli Trevigiani</span><br> IGT</p>
+			</div>
+			<div class="col-md-3 col-sm-6 text-center animation fadeIn">
+				<img class="img-fluid" src="images/vini/incrocio-manzoni.jpg" alt="Incrocio Manzoni">
+				<h5 class="product-title px-4">INCROCIO MANZONI 6.0.13</h5>
+				<p class="product-subtitle"><span class="font-italic">Bianco</span></p>
+			</div>
+			<div class="col-md-3 col-sm-6 text-center animation fadeIn">
+				<img class="img-fluid" src="images/vini/spumante.jpg" alt="Spumante di Qualità">
+				<h5 class="product-title px-4">SPUMANTE DI QUALITÀ</h5>
+				<p class="product-subtitle"><span class="font-italic">Vino bianco</span></p>
+			</div>
+			<div class="col-md-3 col-sm-6 text-center animation fadeIn">
+				<img class="img-fluid" src="images/vini/rosato.jpg" alt="Rosato">
+				<h5 class="product-title px-4">ROSATO</h5>
+				<p class="product-subtitle"><span class="font-italic">Vino Spumante</span></p>
 			</div>
 		</div>
-		<div class="carousel-item">
-			<img class="d-block w-100" src="images/vini/carousel-2.jpg" alt="Third slide">
-			<div class="carousel-caption d-none d-md-block">
-				<p class="title">UN VIAGGIO DI GUSTO</p>
+	</section>
 
+	<!-- Call to Action Section -->
+	<section class="cta-section">
+		<img src="images/AA.png" alt="AA Logo">
+		<p class="title">VUOI SAPERNE DI PIÙ?</p><br>
+		<a href="mailto:soc.agr.costabella@gmail.com" class="btn btn-outline-primary m-4 btn-sm">CONTATTACI</a>
+	</section>
+
+
+	<!-- Footer -->
+	<footer class="footer py-5 pb-3">
+		<div class="container-fluid ">
+			<div class="row align-items-center">
+				<div class="col-md-4 pb-5 col-sm-12 text-center">
+					<a class="logo" href="#"><img src="images/logo.bianco.png" alt="Logo"></a>
+				</div>
+
+				<div class="col-md-4 col-sm-6 ">
+					<h5 class="mb-0 pb-0 titoletto">SOCIETÀ AGRICOLA COSTABELLA</h5>
+					<p class="my-1 py-0">di Amadio Adriano e Amadio Paolo s.s.</p>
+					<div class="underline"></div>
+					<p>Via Michele Giunti 27, <br> 31015 Conegliano TV </p>
+					<p>P.IVA 04357000266</p>
+				</div>
+				<div class="col-md-4 col-sm-6  ">
+					<h5 class="titoletto my-1 py-0">CONTATTI</h5>
+					<div class="underline"></div>
+					<p>Tel: +39 0438 62405 <br> Email:
+						<a href="mailto:soc.agr.costabella@gmail.com">soc.agr.costabella@gmail.com</a>
+					</p>
+				</div>
 			</div>
 		</div>
-	</div>
+	</footer>
 
-	<!-- Controls -->
-	<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-		<span class="carousel-control-prev-icon" aria-hidden="true"></span> <span class="sr-only">Previous</span> </a>
-	<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-		<span class="carousel-control-next-icon" aria-hidden="true"></span> <span class="sr-only">Next</span> </a>
-</div>
-
-
-<!-- Products Section -->
-<section class="container my-5">
-	<div class="row m-5 ">
-		<div class="container-fluid">
-			<h2 class="text-center section-title">LA NOSTRA SELEZIONE</h2>
-			<p class="text-center section-subtitle">L'espressione autentica della nostra passione, un brindisi alla vita</p>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-3 col-sm-6 text-center animation fadeIn">
-			<img class="img-fluid" src="images/vini/conegliano-valdobbiadene.jpg" alt="Prosecco Superiore EXTRA DRY">
-			<h5 class="product-title px-4">CONEGLIANO VALDOBBIADENE</h5>
-			<p class="product-subtitle"><span class="font-italic"> Superiore</span> <br> EXTRA DRY</p>
-		</div>
-		<div class="col-md-3 col-sm-6 text-center animation fadeIn">
-			<img class="img-fluid" src="images/vini/conegliano-valdobbiadene_1.jpg" alt="Prosecco Sur Lie">
-			<h5 class="product-title px-4">CONEGLIANO VALDOBBIADENE</h5>
-			<p class="product-subtitle"><span class="font-italic">Prosecco Sur Lie </span> <br> DOCG</p>
-		</div>
-		<div class="col-md-3 col-sm-6 text-center animation fadeIn">
-			<img class="img-fluid" src="images/vini/conegliano-valdobbiadene_2.jpg" alt="Prosecco Superiore BRUT">
-			<h5 class="product-title px-4">CONEGLIANO VALDOBBIADENE</h5>
-			<p class="product-subtitle"><span class="font-italic">Prosecco Superiore </span><br> DOCG - BRUT</p>
-		</div>
-		<div class="col-md-3 col-sm-6 text-center animation fadeIn">
-			<img class="img-fluid" src="images/vini/verdisio.jpg" alt="Verdìso">
-			<h5 class="product-title px-4">VERDISO</h5>
-			<p class="product-subtitle"><span class="font-italic">Colli Trevigiani </span> <br> IGT</p>
-		</div>
-		<div class="col-md-3 col-sm-6 text-center animation fadeIn">
-			<img class="img-fluid" src="images/vini/merlot.jpg" alt="Merlot">
-			<h5 class="product-title px-4">MERLOT</h5>
-			<p class="product-subtitle"><span class="font-italic">Colli Trevigiani</span><br> IGT</p>
-		</div>
-		<div class="col-md-3 col-sm-6 text-center animation fadeIn">
-			<img class="img-fluid" src="images/vini/incrocio-manzoni.jpg" alt="Incrocio Manzoni">
-			<h5 class="product-title px-4">INCROCIO MANZONI 6.0.13</h5>
-			<p class="product-subtitle"><span class="font-italic">Bianco</span></p>
-		</div>
-		<div class="col-md-3 col-sm-6 text-center animation fadeIn">
-			<img class="img-fluid" src="images/vini/spumante.jpg" alt="Spumante di Qualità">
-			<h5 class="product-title px-4">SPUMANTE DI QUALITÀ</h5>
-			<p class="product-subtitle"><span class="font-italic">Vino bianco</span></p>
-		</div>
-		<div class="col-md-3 col-sm-6 text-center animation fadeIn">
-			<img class="img-fluid" src="images/vini/rosato.jpg" alt="Rosato">
-			<h5 class="product-title px-4">ROSATO</h5>
-			<p class="product-subtitle"><span class="font-italic">Vino Spumante</span></p>
-		</div>
-	</div>
-</section>
-
-<!-- Call to Action Section -->
-<section class="cta-section">
-	<img src="images/AA.png" alt="AA Logo">
-	<p class="title ">VUOI SAPERNE DI PIÙ?</p><br>
-	<a href="mailto:soc.agr.costabella@gmail.com" class="btn btn-outline-primary m-4 btn-sm">CONTATTACI</a>
-</section>
-
-
-<!-- Footer -->
-<footer class="footer py-5 pb-3">
-	<div class="container-fluid ">
-		<div class="row align-items-center">
-			<div class="col-md-4 pb-5 col-sm-12 text-center">
-				<a class="logo" href="#"><img src="images/logo.bianco.png" alt="Logo"></a>
-			</div>
-
-			<div class="col-md-4 col-sm-6 ">
-				<h5 class="mb-0 pb-0 titoletto">SOCIETÀ AGRICOLA COSTABELLA</h5>
-				<p class="my-1 py-0">di Amadio Adriano e Amadio Paolo s.s.</p>
-				<div class="underline"></div>
-				<p>Via Michele Giunti 27, <br> 31015 Conegliano TV </p>
-				<p>P.IVA 04357000266</p>
-			</div>
-			<div class="col-md-4 col-sm-6  ">
-				<h5 class="titoletto my-1 py-0">CONTATTI</h5>
-				<div class="underline"></div>
-				<p>Tel: +39 0438 62405 <br> Email:
-					<a href="mailto:soc.agr.costabella@gmail.com">soc.agr.costabella@gmail.com</a></p>
-			</div>
-		</div>
-	</div>
-</footer>
-
-<script src="script_animation.js"></script>
+	<script src="script_animation.js"></script>
 </body>
+
 </html>
